[package]
name = "rocket_app"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "0.8"
tasks_db_lib = { path = "../tasks_db_lib" }
dotenvy = "0.15"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
